# couliglig_second_try

./: super_launch.py  test.py
src/couliglig/: package.xml  setup.cfg  setup.py
src/couliglig/config/: costmap_params.yaml  couliglig_diff_drive.yaml  efk.yaml  ekf.yaml  mappers_online_params.yaml  nav2_params.yaml  nav2_params2.yaml
src/couliglig/couliglig/: couliglig_bot.py  imu_publisher.py  keyboard_controller.py  lidar_publisher.py  odom_publisher.py
src/couliglig/launch/: robot_launch.py  robot_nav2_launch.py
src/couliglig/resource/: couliglig_bot.urdf
src/couliglig/worlds/: .couliglig_bot.wbproj  couliglig_bot.wbt
src/couliglig/worlds/stl_files/: Al_Profile_Assem.STL  bumper.STL  caster_wheel_P1.STL  caster_wheel_P2.STL  caster_wheel_P3.STL  casterwheel_casing.STL
