<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>couliglig</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="minegears@todo.todo">minegears</maintainer>
  <license>Apache-2.0</license>

  <!-- Core dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  
  <!-- Control stack -->
  <depend>webots_ros2_driver</depend>
  <depend>webots_ros2_control</depend>

  <!-- Control stack -->
  <depend>ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>tf2_ros</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>

  <exec_depend>robot_localization</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
